--- a/Reacture/Reacture/Launch Screen.storyboard
+++ b/Reacture/Reacture/Launch Screen.storyboard
@@ -30,8 +30,8 @@
                                     <imageView opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Project_Logo" translatesAutoresizingMaskIntoConstraints="NO" id="dVw-I5-ASG">
                                         <rect key="frame" x="147" y="0.0" width="250" height="250"/>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="FlipPic" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="d90-iy-J9k">
-                                        <rect key="frame" x="127.5" y="250" width="289" height="132"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="[APP NAME]" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="d90-iy-J9k">
+                                        <rect key="frame" x="128" y="250" width="289" height="132"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="289" id="nyW-oE-95R"/>
                                             <constraint firstAttribute="height" constant="132" id="zwO-a3-6aY"/>
