--- a/Reacture/Reacture/Base.lproj/Main.storyboard
+++ b/Reacture/Reacture/Base.lproj/Main.storyboard
@@ -10,7 +10,7 @@
         <!--Camera View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="RCT_CameraViewController" customModule="Reacture" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="RCT_CameraViewController" customModule="FlipPic" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -31,7 +31,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TMN-mf-aEW">
-                                <rect key="frame" x="532" y="28" width="60" height="60"/>
+                                <rect key="frame" x="532" y="20" width="60" height="60"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="60" id="Irt-Cn-U3M"/>
                                     <constraint firstAttribute="height" constant="60" id="khi-jH-SKT"/>
@@ -48,7 +48,7 @@
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Jgt-4j-ZFs" secondAttribute="bottom" constant="20" id="35c-vc-hdk"/>
                             <constraint firstItem="lfu-hq-PEG" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="-20" id="O4f-br-5Y6"/>
                             <constraint firstItem="Jgt-4j-ZFs" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="SR5-V5-1Z6"/>
-                            <constraint firstItem="TMN-mf-aEW" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="YK9-Vx-Kl1"/>
+                            <constraint firstItem="TMN-mf-aEW" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="YK9-Vx-Kl1"/>
                             <constraint firstItem="lfu-hq-PEG" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="jS6-9w-EkT"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="lfu-hq-PEG" secondAttribute="bottom" id="kgD-vl-5E1"/>
                             <constraint firstAttribute="trailing" secondItem="TMN-mf-aEW" secondAttribute="trailing" constant="8" id="oYT-mW-Bva"/>
@@ -66,7 +66,7 @@
         <!--Edit View Controller-->
         <scene sceneID="bJa-TL-fS9">
             <objects>
-                <viewController id="AIB-wN-uwu" customClass="RCT_EditViewController" customModule="Reacture" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="AIB-wN-uwu" customClass="RCT_EditViewController" customModule="FlipPic" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="tcH-JP-lDO"/>
                         <viewControllerLayoutGuide type="bottom" id="4tb-8G-sTv"/>
@@ -76,17 +76,24 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="equalCentering" translatesAutoresizingMaskIntoConstraints="NO" id="8L8-GF-PZR">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="59"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="62"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cOn-dm-Wdw">
-                                        <rect key="frame" x="16" y="21" width="25" height="30"/>
+                                        <rect key="frame" x="16" y="21" width="25" height="33"/>
                                         <state key="normal" image="cancelButton"/>
                                         <connections>
                                             <action selector="CancelButtonTapped:" destination="AIB-wN-uwu" eventType="touchUpInside" id="7tu-lT-FwB"/>
                                         </connections>
                                     </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UTj-5x-w2K">
+                                        <rect key="frame" x="187" y="21" width="37" height="33"/>
+                                        <state key="normal" image="swapImagesButton"/>
+                                        <connections>
+                                            <action selector="swapImageButtonTapped:" destination="AIB-wN-uwu" eventType="touchUpInside" id="RqU-vz-j2B"/>
+                                        </connections>
+                                    </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dHo-cf-Zad">
-                                        <rect key="frame" x="368" y="21" width="30" height="30"/>
+                                        <rect key="frame" x="368" y="21" width="30" height="33"/>
                                         <state key="normal" image="shareButton"/>
                                         <connections>
                                             <action selector="shareButtonTapped:" destination="AIB-wN-uwu" eventType="touchUpInside" id="L02-Yj-y1m"/>
@@ -123,10 +130,10 @@
                                 </items>
                             </toolbar>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bps-GF-H7p">
-                                <rect key="frame" x="0.0" y="67" width="414" height="515"/>
+                                <rect key="frame" x="0.0" y="70" width="414" height="512"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hu3-fH-eJk">
-                                        <rect key="frame" x="0.0" y="51" width="414" height="414"/>
+                                        <rect key="frame" x="0.0" y="49" width="414" height="414"/>
                                         <color key="backgroundColor" red="0.58280308420000004" green="0.79040464740000005" blue="0.19517801730000001" alpha="1" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="Hu3-fH-eJk" secondAttribute="height" multiplier="1:1" id="PJ3-Oq-ENL"/>
@@ -180,7 +187,7 @@
         <!--Container View Controller-->
         <scene sceneID="FRA-js-Q9i">
             <objects>
-                <viewController id="BZJ-cT-0Rw" customClass="RCT_ContainerViewController" customModule="Reacture" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BZJ-cT-0Rw" customClass="RCT_ContainerViewController" customModule="FlipPic" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="tV2-3c-5UB"/>
                         <viewControllerLayoutGuide type="bottom" id="zum-XO-imT"/>
@@ -199,7 +206,7 @@
                                     <inset key="sectionInset" minX="8" minY="0.0" maxX="8" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="OptionItemCell" id="e8N-iX-Hld" customClass="RCT_OptionItemCollectionViewCell" customModule="Reacture" customModuleProvider="target">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="OptionItemCell" id="e8N-iX-Hld" customClass="RCT_OptionItemCollectionViewCell" customModule="FlipPic" customModuleProvider="target">
                                         <rect key="frame" x="8" y="10" width="80" height="80"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -217,7 +224,7 @@
                                                             </constraints>
                                                         </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CER-jF-lHb">
-                                                            <rect key="frame" x="23" y="61" width="35" height="19"/>
+                                                            <rect key="frame" x="22" y="61" width="36" height="19"/>
                                                             <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="14"/>
                                                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                             <nil key="highlightedColor"/>
@@ -261,14 +268,15 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="m2P-GJ-1jg" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="729" y="1009"/>
+            <point key="canvasLocation" x="729" y="1008"/>
         </scene>
     </scenes>
     <resources>
         <image name="cancelButton" width="25" height="25"/>
-        <image name="filter_icon" width="22" height="22"/>
-        <image name="layout_corner" width="22" height="22"/>
+        <image name="filter_icon" width="30" height="30"/>
+        <image name="layout_corner" width="25" height="25"/>
         <image name="shareButton" width="30" height="30"/>
-        <image name="switchCameraButton" width="250" height="250"/>
+        <image name="swapImagesButton" width="37" height="33"/>
+        <image name="switchCameraButton" width="521" height="520"/>
     </resources>
 </document>
