--- a/Reacture/Reacture/Launch Screen.storyboard
+++ b/Reacture/Reacture/Launch Screen.storyboard
@@ -18,14 +18,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Copyright © 2016 BAEP. All rights reserved." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="obG-Y5-kRd">
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Copyright © 2016 BAEPS. All rights reserved." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="obG-Y5-kRd">
                                 <rect key="frame" x="28" y="559" width="544" height="33"/>
                                 <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="24"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="XEb-cq-IxG">
-                                <rect key="frame" x="28" y="70" width="544" height="382"/>
+                                <rect key="frame" x="28" y="70" width="544" height="421"/>
                                 <subviews>
                                     <imageView opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Project_Logo" translatesAutoresizingMaskIntoConstraints="NO" id="dVw-I5-ASG">
                                         <rect key="frame" x="147" y="0.0" width="250" height="250"/>
@@ -40,7 +40,18 @@
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="“Your Front/Back Camera App”" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="YOS-X2-iXK">
+                                        <rect key="frame" x="0.0" y="382" width="544" height="39"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Italic" family="Avenir Next" pointSize="28"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
+                                <constraints>
+                                    <constraint firstItem="YOS-X2-iXK" firstAttribute="leading" secondItem="XEb-cq-IxG" secondAttribute="leading" id="0DN-x3-bAz"/>
+                                    <constraint firstItem="YOS-X2-iXK" firstAttribute="centerX" secondItem="XEb-cq-IxG" secondAttribute="centerX" id="bZ9-d3-R5W"/>
+                                    <constraint firstAttribute="trailing" secondItem="YOS-X2-iXK" secondAttribute="trailing" id="mWe-e1-q45"/>
+                                </constraints>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" red="0.61665338277816772" green="0.8319970965385437" blue="0.26303833723068237" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
