--- a/Reacture/Reacture/Base.lproj/Main.storyboard
+++ b/Reacture/Reacture/Base.lproj/Main.storyboard
@@ -76,31 +76,34 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="equalCentering" translatesAutoresizingMaskIntoConstraints="NO" id="8L8-GF-PZR">
-                                <rect key="frame" x="0.0" y="0.0" width="414" height="77"/>
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="60"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cOn-dm-Wdw">
-                                        <rect key="frame" x="16" y="21" width="25" height="48"/>
+                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cOn-dm-Wdw">
+                                        <rect key="frame" x="16" y="10" width="25" height="34"/>
                                         <state key="normal" image="cancelButton"/>
                                         <connections>
                                             <action selector="CancelButtonTapped:" destination="AIB-wN-uwu" eventType="touchUpInside" id="7tu-lT-FwB"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UTj-5x-w2K">
-                                        <rect key="frame" x="187" y="21" width="37" height="48"/>
+                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UTj-5x-w2K">
+                                        <rect key="frame" x="187" y="10" width="37" height="34"/>
                                         <state key="normal" image="swapImagesButton"/>
                                         <connections>
                                             <action selector="swapImageButtonTapped:" destination="AIB-wN-uwu" eventType="touchUpInside" id="RqU-vz-j2B"/>
                                         </connections>
                                     </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dHo-cf-Zad">
-                                        <rect key="frame" x="368" y="21" width="30" height="48"/>
+                                    <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dHo-cf-Zad">
+                                        <rect key="frame" x="368" y="10" width="30" height="34"/>
                                         <state key="normal" image="shareButton"/>
                                         <connections>
                                             <action selector="shareButtonTapped:" destination="AIB-wN-uwu" eventType="touchUpInside" id="L02-Yj-y1m"/>
                                         </connections>
                                     </button>
                                 </subviews>
-                                <edgeInsets key="layoutMargins" top="21" left="16" bottom="8" right="16"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="m2f-44-vHb"/>
+                                </constraints>
+                                <edgeInsets key="layoutMargins" top="10" left="16" bottom="16" right="16"/>
                             </stackView>
                             <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qpj-PE-9Wz">
                                 <rect key="frame" x="0.0" y="582" width="414" height="110"/>
@@ -111,6 +114,33 @@
                                     <segue destination="BZJ-cT-0Rw" kind="embed" id="pmK-ua-5nR"/>
                                 </connections>
                             </containerView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bps-GF-H7p">
+                                <rect key="frame" x="0.0" y="60" width="414" height="522"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hu3-fH-eJk">
+                                        <rect key="frame" x="0.0" y="13" width="414" height="497"/>
+                                        <color key="backgroundColor" red="0.58280308420000004" green="0.79040464740000005" blue="0.19517801730000001" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="Hu3-fH-eJk" secondAttribute="height" multiplier="1:1.2" id="ovS-Ze-UO5"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" red="0.26836782693862915" green="0.28168493509292603" blue="0.29457771778106689" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstItem="Hu3-fH-eJk" firstAttribute="top" secondItem="bps-GF-H7p" secondAttribute="top" id="3Ol-Mh-wlE"/>
+                                    <constraint firstAttribute="trailing" secondItem="Hu3-fH-eJk" secondAttribute="trailing" id="Jq5-T8-ibJ"/>
+                                    <constraint firstItem="Hu3-fH-eJk" firstAttribute="centerY" secondItem="bps-GF-H7p" secondAttribute="centerY" id="MfM-B7-KOU"/>
+                                    <constraint firstAttribute="bottom" secondItem="Hu3-fH-eJk" secondAttribute="bottom" id="aTk-xn-Qyn"/>
+                                    <constraint firstItem="Hu3-fH-eJk" firstAttribute="leading" secondItem="bps-GF-H7p" secondAttribute="leading" id="gGr-fp-m33"/>
+                                    <constraint firstItem="Hu3-fH-eJk" firstAttribute="width" secondItem="bps-GF-H7p" secondAttribute="width" id="qg9-QT-YMO"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="3Ol-Mh-wlE"/>
+                                        <exclude reference="aTk-xn-Qyn"/>
+                                    </mask>
+                                </variation>
+                            </view>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y2p-AU-EyF">
                                 <rect key="frame" x="0.0" y="692" width="414" height="44"/>
                                 <items>
@@ -129,37 +159,16 @@
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="2n0-j1-FbY"/>
                                 </items>
                             </toolbar>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bps-GF-H7p">
-                                <rect key="frame" x="0.0" y="85" width="414" height="497"/>
-                                <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hu3-fH-eJk">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="497"/>
-                                        <color key="backgroundColor" red="0.58280308420000004" green="0.79040464740000005" blue="0.19517801730000001" alpha="1" colorSpace="calibratedRGB"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" secondItem="Hu3-fH-eJk" secondAttribute="height" multiplier="1:1.2" id="ovS-Ze-UO5"/>
-                                        </constraints>
-                                    </view>
-                                </subviews>
-                                <color key="backgroundColor" red="0.26836782693862915" green="0.28168493509292603" blue="0.29457771778106689" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <constraints>
-                                    <constraint firstItem="Hu3-fH-eJk" firstAttribute="top" secondItem="bps-GF-H7p" secondAttribute="top" id="3Ol-Mh-wlE"/>
-                                    <constraint firstAttribute="trailing" secondItem="Hu3-fH-eJk" secondAttribute="trailing" id="Jq5-T8-ibJ"/>
-                                    <constraint firstItem="Hu3-fH-eJk" firstAttribute="centerY" secondItem="bps-GF-H7p" secondAttribute="centerY" id="MfM-B7-KOU"/>
-                                    <constraint firstAttribute="bottom" secondItem="Hu3-fH-eJk" secondAttribute="bottom" id="aTk-xn-Qyn"/>
-                                    <constraint firstItem="Hu3-fH-eJk" firstAttribute="leading" secondItem="bps-GF-H7p" secondAttribute="leading" id="gGr-fp-m33"/>
-                                    <constraint firstItem="Hu3-fH-eJk" firstAttribute="width" secondItem="bps-GF-H7p" secondAttribute="width" id="qg9-QT-YMO"/>
-                                </constraints>
-                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="Qpj-PE-9Wz" firstAttribute="top" secondItem="bps-GF-H7p" secondAttribute="bottom" id="4J4-FT-dC8"/>
                             <constraint firstItem="y2p-AU-EyF" firstAttribute="top" secondItem="Qpj-PE-9Wz" secondAttribute="bottom" id="6ZK-kS-dM1"/>
                             <constraint firstAttribute="trailing" secondItem="y2p-AU-EyF" secondAttribute="trailing" id="7Xi-JG-puQ"/>
-                            <constraint firstItem="bps-GF-H7p" firstAttribute="top" secondItem="8L8-GF-PZR" secondAttribute="bottom" constant="8" id="FXN-xu-aob"/>
+                            <constraint firstItem="bps-GF-H7p" firstAttribute="top" secondItem="8L8-GF-PZR" secondAttribute="bottom" id="FXN-xu-aob"/>
                             <constraint firstItem="8L8-GF-PZR" firstAttribute="leading" secondItem="Ccv-AG-wNT" secondAttribute="leading" id="H23-S9-2t9"/>
                             <constraint firstItem="8L8-GF-PZR" firstAttribute="top" secondItem="Ccv-AG-wNT" secondAttribute="top" id="HRn-6X-sdO"/>
-                            <constraint firstItem="bps-GF-H7p" firstAttribute="top" secondItem="8L8-GF-PZR" secondAttribute="bottom" constant="8" id="N3O-q5-bHr"/>
+                            <constraint firstItem="bps-GF-H7p" firstAttribute="top" secondItem="8L8-GF-PZR" secondAttribute="bottom" id="N3O-q5-bHr"/>
                             <constraint firstAttribute="trailing" secondItem="8L8-GF-PZR" secondAttribute="trailing" id="Pm1-Gc-XIu"/>
                             <constraint firstItem="4tb-8G-sTv" firstAttribute="top" secondItem="y2p-AU-EyF" secondAttribute="bottom" id="RJY-RG-iJ8"/>
                             <constraint firstItem="Qpj-PE-9Wz" firstAttribute="leading" secondItem="Ccv-AG-wNT" secondAttribute="leading" id="Reu-aQ-bjF"/>
@@ -216,17 +225,22 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="RdI-Ss-6um">
-                                                    <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
+                                                    <rect key="frame" x="8" y="0.0" width="64" height="80"/>
                                                     <subviews>
-                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="RM8-x0-apE">
-                                                            <rect key="frame" x="10" y="0.0" width="61" height="61"/>
-                                                            <constraints>
-                                                                <constraint firstAttribute="width" secondItem="RM8-x0-apE" secondAttribute="height" multiplier="1:1" id="LS8-f7-zd1"/>
-                                                                <constraint firstAttribute="height" constant="60.5" id="Qxe-XP-OOj"/>
-                                                            </constraints>
-                                                        </imageView>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="cvx-4a-bQD">
+                                                            <rect key="frame" x="1" y="0.0" width="62" height="62"/>
+                                                            <subviews>
+                                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="RM8-x0-apE">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="62" height="62"/>
+                                                                    <constraints>
+                                                                        <constraint firstAttribute="width" secondItem="RM8-x0-apE" secondAttribute="height" multiplier="1:1" id="LS8-f7-zd1"/>
+                                                                        <constraint firstAttribute="height" constant="62" id="Qxe-XP-OOj"/>
+                                                                    </constraints>
+                                                                </imageView>
+                                                            </subviews>
+                                                        </stackView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CER-jF-lHb">
-                                                            <rect key="frame" x="22" y="61" width="36" height="19"/>
+                                                            <rect key="frame" x="14" y="62" width="36" height="18"/>
                                                             <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="14"/>
                                                             <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                             <nil key="highlightedColor"/>
@@ -237,10 +251,10 @@
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
                                         <constraints>
-                                            <constraint firstItem="RdI-Ss-6um" firstAttribute="leading" secondItem="e8N-iX-Hld" secondAttribute="leading" id="6H4-lu-fA6"/>
+                                            <constraint firstItem="RdI-Ss-6um" firstAttribute="leading" secondItem="e8N-iX-Hld" secondAttribute="leading" constant="8" id="6H4-lu-fA6"/>
                                             <constraint firstItem="RdI-Ss-6um" firstAttribute="top" secondItem="e8N-iX-Hld" secondAttribute="top" id="Dgu-D6-7vs"/>
                                             <constraint firstAttribute="bottom" secondItem="RdI-Ss-6um" secondAttribute="bottom" id="QoQ-FL-5TY"/>
-                                            <constraint firstAttribute="trailing" secondItem="RdI-Ss-6um" secondAttribute="trailing" id="pMJ-qf-VYW"/>
+                                            <constraint firstAttribute="trailing" secondItem="RdI-Ss-6um" secondAttribute="trailing" constant="8" id="pMJ-qf-VYW"/>
                                         </constraints>
                                         <connections>
                                             <outlet property="imageView" destination="RM8-x0-apE" id="RPP-Ld-Yy7"/>
